[package]
name = "molva"
version = "0.0.1"
authors = ["Eliot Krone <krondev@pm.me>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "molva"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
hex-literal = "0.1"
slog = "^2"
parity-codec = "3.0"
trie-root = "0.11.0"
sr-io = { path = "../core/sr-io" }
substrate-cli = { path = "srml/core/cli" }
primitives = { package = "substrate-primitives", path = "srml/core/primitives" }
substrate-executor = { path = "srml/core/executor" }
substrate-service = { path = "srml/core/service" }
inherents = { package = "substrate-inherents", path = "srml/core/inherents" }
transaction-pool = { package = "substrate-transaction-pool", path = "srml/core/transaction-pool" }
network = { package = "substrate-network", path = "srml/core/network" }
consensus = { package = "substrate-consensus-aura", path = "srml/core/consensus/aura" }
substrate-client = {  path = "srml/core/client" }
basic-authorship = { package = "substrate-basic-authorship", path = "srml/core/basic-authorship" }
node-template-runtime = { path = "runtime" }
node-executor = { path = "srml/node/executor" }

[build-dependencies]
vergen = "3"
