[package]
name = "node-template"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
build = "build.rs"
edition = "2018"

[[bin]]
name = "template-node"
path = "src/main.rs"

[dependencies]
error-chain = "0.12"
futures = "0.1"
ctrlc = { version = "3.0", features = ["termination"] }
log = "0.4"
tokio = "0.1"
exit-future = "0.1"
parking_lot = "0.7.1"
hex-literal = "0.1"
slog = "^2"
parity-codec = "3.0"
trie-root = "0.11.0"
sr-io = { path = "../core/sr-io" }
substrate-cli = { path = "substrate/core/cli" }
primitives = { package = "substrate-primitives", path = "substrate/core/primitives" }
substrate-executor = { path = "substrate/core/executor" }
substrate-service = { path = "substrate/core/service" }
inherents = { package = "substrate-inherents", path = "substrate/core/inherents" }
transaction-pool = { package = "substrate-transaction-pool", path = "substrate/core/transaction-pool" }
network = { package = "substrate-network", path = "substrate/core/network" }
consensus = { package = "substrate-consensus-aura", path = "substrate/core/consensus/aura" }
substrate-client = {  path = "substrate/core/client" }
basic-authorship = { package = "substrate-basic-authorship", path = "substrate/core/basic-authorship" }
node-template-runtime = { path = "runtime" }
node-executor = { path = "substrate/node/executor" }

[build-dependencies]
vergen = "3"
