[package]
name = "node-template-runtime"
version = "0.9.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", default-features = false }
serde_derive = { version = "1.0", optional = true }
safe-mix = { version = "1.0", default-features = false }
parity-codec = { version = "3.0", default-features = false }
parity-codec-derive = { version = "3.0", default-features = false }
rstd = { package = "sr-std", path = "../substrate/core/sr-std", default_features = false }
runtime-io = { package = "sr-io", path = "../substrate/core/sr-io", default_features = false }
version = { package = "sr-version", path = "../substrate/core/sr-version", default_features = false }
support = { package = "srml-support", path = "../substrate/srml/support", default_features = false }
primitives = { package = "substrate-primitives", path = "../substrate/core/primitives", default_features = false }
balances = { package = "srml-balances", path = "../substrate/srml/balances", default_features = false }
fees = { package = "srml-fees", path = "../substrate/srml/fees", default_features = false }
consensus = { package = "srml-consensus", path = "../substrate/srml/consensus", default_features = false }
aura = { package = "srml-aura", path = "../substrate/srml/aura", default_features = false }
executive = { package = "srml-executive", path = "../substrate/srml/executive", default_features = false }
indices = { package = "srml-indices", path = "../substrate/srml/indices", default_features = false }
system = { package = "srml-system", path = "../substrate/srml/system", default_features = false }
timestamp = { package = "srml-timestamp", path = "../substrate/srml/timestamp", default_features = false }
sudo = { package = "srml-sudo", path = "../substrate/srml/sudo", default_features = false }
runtime-primitives = { package = "sr-primitives", path = "../substrate/core/sr-primitives", default_features = false }
client = { package = "substrate-client", path = "../substrate/core/client", default_features = false }
consensus-aura = { package = "substrate-consensus-aura-primitives", path = "../substrate/core/consensus/aura/primitives", default_features = false }

[features]
default = ["std"]
std = [
	"parity-codec/std",
	"parity-codec-derive/std",
	"primitives/std",
	"client/std",
	"rstd/std",
	"runtime-io/std",
	"support/std",
	"balances/std",
	"fees/std",
	"executive/std",
	"aura/std",
	"indices/std",
	"primitives/std",
	"system/std",
	"timestamp/std",
	"sudo/std",
	"version/std",
	"serde_derive",
	"serde/std",
	"safe-mix/std",
	"consensus-aura/std",
]
