[package]
name = "molva"
description = "P2P messenger"
version = "0.0.1"
authors = ["Eliot Krone <krondev@protonmail.com>"]
edition = "2018"

[dependencies]
libp2p = { git = "https://github.com/libp2p/rust-libp2p" }
rocksdb = "0.10.1"
rand = "0.6"
env_logger = "0.6.0"
futures = "0.1"
tokio = "0.1"
tokio-codec = "0.1"
tokio-executor = "0.1"
tokio-stdin-stdout = "0.1"
names = "0.11"
