[package]
name = "molva-runtime-wasm"
version = "0.0.1"
authors = ["Eliot Krone <krondev@pm.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
molva-runtime = { path = "..", default-features = false }

[features]
default = []
std = [
	"molva-runtime/std",
]

[profile.release]
panic = "abort"
lto = true

[workspace]
members = []
